; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/omapdrm/extr_omap_gem.c_omap_gem_is_cached_coherent.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/omapdrm/extr_omap_gem.c_omap_gem_is_cached_coherent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_gem_object = type { i32 }
%struct.omap_gem_object = type { i32 }

@OMAP_BO_MEM_SHMEM = common dso_local global i32 0, align 4
@OMAP_BO_CACHE_MASK = common dso_local global i32 0, align 4
@OMAP_BO_CACHED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.drm_gem_object*)* @omap_gem_is_cached_coherent to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @omap_gem_is_cached_coherent(%struct.drm_gem_object* %0) #0 {
  %2 = alloca %struct.drm_gem_object*, align 8
  %3 = alloca %struct.omap_gem_object*, align 8
  store %struct.drm_gem_object* %0, %struct.drm_gem_object** %2, align 8
  %4 = load %struct.drm_gem_object*, %struct.drm_gem_object** %2, align 8
  %5 = call %struct.omap_gem_object* @to_omap_bo(%struct.drm_gem_object* %4)
  store %struct.omap_gem_object* %5, %struct.omap_gem_object** %3, align 8
  %6 = load %struct.omap_gem_object*, %struct.omap_gem_object** %3, align 8
  %7 = getelementptr inbounds %struct.omap_gem_object, %struct.omap_gem_object* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* @OMAP_BO_MEM_SHMEM, align 4
  %10 = and i32 %8, %9
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %20

12:                                               ; preds = %1
  %13 = load %struct.omap_gem_object*, %struct.omap_gem_object** %3, align 8
  %14 = getelementptr inbounds %struct.omap_gem_object, %struct.omap_gem_object* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* @OMAP_BO_CACHE_MASK, align 4
  %17 = and i32 %15, %16
  %18 = load i32, i32* @OMAP_BO_CACHED, align 4
  %19 = icmp eq i32 %17, %18
  br label %20

20:                                               ; preds = %12, %1
  %21 = phi i1 [ false, %1 ], [ %19, %12 ]
  %22 = xor i1 %21, true
  %23 = zext i1 %22 to i32
  ret i32 %23
}

declare dso_local %struct.omap_gem_object* @to_omap_bo(%struct.drm_gem_object*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
